hphp/hack/test/extended_reasons/vector_invariant.php.diff.exp
--- control

+++ test

@@ -1,6 +1,5 @@

 error: Typing[4110] Invalid return type [1]
 -> Expected int [2]
--> This type argument to Vector must match exactly (it is invariant) [2]
 -> But got string [3]
 
 hphp/hack/test/extended_reasons/vector_invariant.php:8:10